@@ -1,3 +1,6 @@
+04/10/2009
+- implementation of a 'variable' filter as replacement for default modifier
+
 04/09/2009
 - fixed execution of filters defined by classes
 - compile the always the content of {block} tags to make shure that the filters are running over it
